less/mainContent.less
// ENTIRE SECTION
.middle-content-container {
  margin: 0;
  background: linear-gradient(20deg, @main-bg, @fadein2, @fadein3);
}

// TRACKER SECTION
.tracker {
  .features-cont(10rem, 0, 8rem);

  .section-container {
    .section-cont();

    .text-container {
      .div-cont();

      h2 {
        text-align: center;
        font-variant: small-caps;
      }
      .summary {
        margin-top: 2rem;
        text-align: justify;
        width: 90%;
      }
      ul {
        .list-style();

        li {
          margin-bottom: 1rem;
        }
      }
    }
    .img-container {
      .div-cont2();
      background: url(../imgs/fitness-man-tanktop.jpg) no-repeat right top fixed;
      background-size: cover;
    }
  }
}

// ROUTINE SECTION
.routines {
  .features-cont(0, 0, 8rem);

  .section-container {
    .section-cont();

    .text-container {
      .div-cont();

      h2 {
        text-align: center;
        font-variant: small-caps;
      }
      ul {
        .list-style();

        li {
          margin-bottom: 1rem;
        }
      }
    }
    .img-container {
      .div-cont2();
      background: url(../imgs/couple-jogging.jpg) no-repeat left center fixed;
      background-size: contain;
    }
  }
}

// MEAL PLAN SECTION
.meal-plans {
  .features-cont(0, 0, 10rem);

  .section-container {
    .section-cont();

    .text-container {
      .div-cont();

      .premium {
        display: flex;
        justify-content: flex-end;
        width: 90%;
        color: @premium;

        p {
          color: @premium;
          padding-left: 1rem;
          text-transform: uppercase;
        }
      }
      h2 {
        text-align: center;
        font-variant: small-caps;
      }
      .summary {
        margin-top: 2rem;
        text-align: justify;
        width: 90%;

      }
      ul {
        .list-style();

        li {
          margin-bottom: 1rem;
        }
      }
    }
    .img-container {
      .div-cont2();
      background: url(../imgs/meal-plan2.jpg) no-repeat left bottom fixed;
      background-size: cover;
    }
  }
}

/* MEDIA QUERIES */
.tracker {
  .section-container {
    .text-container {
      @media @lg-tablet {
        background: url(../imgs/fitness-man-tanktop.jpg) no-repeat left bottom fixed;
        background-size: cover;
        border-radius: 10px;

        h2 {
          @media @lg-tablet {
            font-size: 4rem;
            margin-bottom: 5rem;
            color: @secondary-bg-1;
            text-shadow:
		          -1px -1px 0 @main-accent,
		          1px -1px 0 @main-accent,
		          -1px 1px 0 @main-accent,
		          1px 1px 0 @main-accent;
          }
        }
        @media @mobile {
          background: url(../imgs/fitness-man-tanktop.jpg) no-repeat left bottom fixed;
          background-size: cover;
          border-radius: 0;
        }

        .summary, ul {
          @media @lg-tablet {
            background-color: @main-bg;
            list-style-position: inside;
            margin: 0 auto;
            padding: 3rem;
            width: 90%;
          }
        }
        .summary {
          @media @lg-tablet {
            padding-bottom: 2rem;
            border-top-left-radius: 10px;
            border-top-right-radius: 10px;
            border-top: solid 2px @main-accent;
            border-right: solid 2px @main-accent;
            border-left: solid 2px @main-accent;
            font-size: 1.8rem;
            color: @main-accent;
          }
        }
        ul {
          @media @lg-tablet {
            border-bottom-left-radius: 10px;
            border-bottom-right-radius: 10px;
            border-bottom: solid 2px @main-accent;
            border-right: solid 2px @main-accent;
            border-left: solid 2px @main-accent;

            li {
              @media @lg-tablet {
                font-size: 1.5rem;
                color: @main-accent;
              }
            }
          }
        }
      }
    }
  }
}

.routines {
  .section-container {
    .text-container {
      @media @lg-tablet {
        background: url(../imgs/couple-jogging.jpg) no-repeat center bottom fixed;
        background-size: cover;
        border-radius: 10px;

        h2 {
          @media @lg-tablet {
            font-size: 4rem;
            margin-bottom: 5rem;
            color: @secondary-bg-1;
            text-shadow:
		          -1px -1px 0 @main-accent,
		          1px -1px 0 @main-accent,
		          -1px 1px 0 @main-accent,
		          1px 1px 0 @main-accent;
          }
        }
        @media @mobile {
          background: url(../imgs/couple-jogging.jpg) no-repeat left bottom fixed;
          background-size: cover;
          border-radius: 0;
        }

        ul {
          @media @lg-tablet {
            background-color: @main-bg;
            list-style-position: inside;
            margin: 0 auto;
            padding: 3rem;
            width: 90%;
          }
        }
        // .summary {
        //   @media @lg-tablet {
        //     padding-bottom: 2rem;
        //     // border-top-left-radius: 30px;
        //     // border-top-right-radius: 30px;
        //     border-top: solid 2px @main-bg;
        //     border-right: solid 2px @main-bg;
        //     border-left: solid 2px @main-bg;
        //     font-size: 1.8rem;
        //     color: @main-accent;
        //   }
        // }
        ul {
          @media @lg-tablet {
            border-radius: 10px;
            border: solid 2px @main-accent;

            li {
              @media @lg-tablet {
                font-size: 1.5rem;
                color: @main-accent;
              }
            }
          }
        }
      }
    }
    .img-container {
      @media @sm-comp {
        background-position: right;
        background-position: bottom;
        background-size: cover;
      }
    }
  }
}

.meal-plans {
  .section-container {
    .text-container {
      @media @lg-tablet {
        background: url(../imgs/meal-plan2.jpg) no-repeat left bottom fixed;
        background-size: cover;
        border-radius: 10px;

        h2 {
          @media @lg-tablet {
            font-size: 4rem;
            margin-bottom: 5rem;
            color: @secondary-bg-1;
            text-shadow:
		          -1px -1px 0 @main-accent,
		          1px -1px 0 @main-accent,
		          -1px 1px 0 @main-accent,
		          1px 1px 0 @main-accent;
          }
        }
        @media @mobile {
          background: url(../imgs/meal-plan2.jpg) no-repeat left bottom fixed;
          background-size: cover;
          border-radius: 0;
        }

        .summary, ul {
          @media @lg-tablet {
            background-color: @main-bg;
            list-style-position: inside;
            margin: 0 auto;
            padding: 3rem;
            width: 90%;
          }
        }
        .summary {
          @media @lg-tablet {
            padding-bottom: 2rem;
            border-top-left-radius: 10px;
            border-top-right-radius: 10px;
            border-top: solid 2px @main-accent;
            border-right: solid 2px @main-accent;
            border-left: solid 2px @main-accent;
            font-size: 1.8rem;
            color: @main-accent;
          }
        }
        ul {
          @media @lg-tablet {
            border-bottom-left-radius: 10px;
            border-bottom-right-radius: 10px;
            border-bottom: solid 2px @main-accent;
            border-right: solid 2px @main-accent;
            border-left: solid 2px @main-accent;

            li {
              @media @lg-tablet {
                font-size: 1.5rem;
                color: @main-accent;
              }
            }
          }
        }
      }
    }
  }
}

